tests/errors/esub1.f90
subroutine g() r
integer :: x
x = 1
end subroutine
